# src/main/java/com/example/bff/controller/HelloController.java
@@ -2,12 +2,24 @@ package com.example.bff.controller;
 
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RestController;
+import org.springframework.web.reactive.function.client.WebClient;
+
 
 @RestController
 public class HelloController {
 
+    private final WebClient webClient;
+
+    public HelloController(WebClient webClient) {
+        this.webClient = webClient;
+    }
+
     @GetMapping("/hello")
     public String hello() {
-        return "Hello World";
+        return webClient.get()
+                .uri("/hello")
+                .retrieve()
+                .bodyToMono(String.class)
+                .block();
     }
 } 
